[gd_scene load_steps=5 format=3 uid="uid://be3ux2a14cdqh"]

[ext_resource type="Script" path="res://scenesAndScripts/Title_screen.gd" id="1_lme83"]
[ext_resource type="Texture2D" uid="uid://c7oe8b2dmp4t8" path="res://Assets/placeholderArt/Blue.png" id="2_vaewm"]
[ext_resource type="Texture2D" uid="uid://dde16i7otk6mo" path="res://Assets/placeholderArt/spreadGameImage.png" id="3_2ogqm"]
[ext_resource type="AudioStream" uid="uid://db2g4pmlo8n51" path="res://Assets/music/Pirate_Title.wav" id="4_3lbgl"]

[node name="TitleScreen" type="Node"]
script = ExtResource("1_lme83")

[node name="BackgroundTexture" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vaewm")
stretch_mode = 1

[node name="TitleTexture" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -207.0
offset_top = 73.0
offset_right = 215.0
offset_bottom = 149.0
grow_horizontal = 2
texture = ExtResource("3_2ogqm")

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -99.0
offset_right = 146.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "Start"

[node name="SettingsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = 27.0
offset_right = 145.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "Settings"

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3lbgl")
autoplay = true
bus = &"Title"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = 151.0
offset_right = 145.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "Quit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
